# espy_backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  wikipedia_keywords.txt
src/: build_frontpage_batch.rs  build_timeline.rs  http_server.rs  lib.rs  resolver_backend.rs  status.rs  tracing.rs  webhook_handlers.rs  webhook_registration.rs  webhooks_backend.rs
src/api/: firestore.rs  metacritic.rs  mod.rs  steam.rs  steam_scrape.rs  wikipedia.rs  wikipedia_scrape.rs
src/api/common/: mod.rs  normalize.rs
src/api/gog/: gog_scrape.rs  mod.rs
src/api/igdb/: backend.rs  batch.rs  docs.rs  mod.rs  resolve.rs  search.rs  service.rs  webhooks.rs
src/api/steam/: mod.rs  steam.rs  steam_data.rs  steam_scrape.rs
src/batch/: build_notable.rs  build_timeline.rs  build_year_summary.rs  refresh_collections.rs  refresh_companies.rs  refresh_game_entries.rs  steam_update.rs  wikipedia_scrape.rs
src/classifier/: export_labeled_data.rs
src/documents/: annual_review.rs  collection.rs  company.rs  external_game.rs  frontpage.rs  game_digest.rs  game_entry.rs  genre.rs  gog_data.rs  igdb.rs  keyword.rs  library_entry.rs  mod.rs  notable.rs  scores.rs  steam_data.rs  store_entry.rs  storefront.rs  timeline.rs  unresolved.rs  updates.rs  user_tags.rs  wikipedia_data.rs
src/export/: export_labeled_entries.rs  export_unlabeled_entries.rs  import_predictions.rs
src/games/: mod.rs  reconciler.rs  steam_data.rs
src/genres/: genres.rs  mod.rs  predictor.rs
src/genres/utils/: batch_predictor.rs  export_labeled_entries.rs  export_unlabeled_entries.rs  import_predictions.rs  predict.rs
src/http/: handlers.rs  mod.rs  models.rs  query_logs.rs  resources.rs  routes.rs
src/logging/: espy_layer.rs  event_span.rs  log_event.rs  log_layer.rs  log_request.rs  mod.rs  webhook_events.rs
src/logging/counters/: counters.rs  igdb_counters.rs  mod.rs  steam_counters.rs
src/logging/events/: diff_event.rs  firestore_event.rs  metacritic_events.rs  mod.rs  reject_event.rs  resolve_events.rs  steam_events.rs
src/logging/http/: mod.rs  requests.rs
src/logging/resolver/: mod.rs  requests.rs
src/logging/webhooks/: logger.rs  mod.rs  requests.rs
src/resolver/: client.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/resolver/batch/: collect_collections.rs  collect_companies.rs  collect_external_games.rs  collect_games.rs  collect_genres.rs  collect_keywords.rs
src/resolver/igdb/: backend.rs  batch.rs  connection.rs  endpoints.rs  filtering.rs  lookups.rs  mod.rs  ranking.rs  resolve.rs  search.rs  service.rs  webhooks.rs
src/utils/: collect_collections.rs  collect_companies.rs  collect_external_games.rs  collect_games.rs  collect_genres.rs  collect_keywords.rs  count_docs.rs  gog_scrape.rs  refresh_collections.rs  refresh_companies.rs  refresh_game_entries.rs  refresh_library_entries.rs  search_igdb.rs  storefront_cleanup.rs  sync_library.rs  wikipedia_scrape.rs
src/webhooks/: event_logs.rs  filltering.rs  filtering.rs  handlers.rs  mod.rs  prefiltering.rs  routes.rs
