[package]
name = "espy_backend"
version = "0.1.1"
authors = ["bourdenas"]
edition = "2021"

[[bin]] 
name = "http_server"
path = "src/http_server.rs"

[[bin]] 
name = "webhook_handlers"
path = "src/webhook_handlers.rs"

[[bin]] 
name = "webhook_registration"
path = "src/webhook_registration.rs"

# Command line utils
[[bin]] 
name = "collect_collections"
path = "src/utils/collect_collections.rs"

[[bin]] 
name = "collect_companies"
path = "src/utils/collect_companies.rs"

[[bin]] 
name = "collect_external_games"
path = "src/utils/collect_external_games.rs"

[[bin]] 
name = "collect_games"
path = "src/utils/collect_games.rs"

[[bin]] 
name = "collect_genres"
path = "src/utils/collect_genres.rs"

[[bin]] 
name = "collect_keywords"
path = "src/utils/collect_keywords.rs"

[[bin]] 
name = "sync_library"
path = "src/utils/sync_library.rs"

[[bin]] 
name = "refresh_collections"
path = "src/utils/refresh_collections.rs"

[[bin]] 
name = "refresh_game_entries"
path = "src/utils/refresh_game_entries.rs"

[[bin]] 
name = "refresh_library_entries"
path = "src/utils/refresh_library_entries.rs"

[[bin]]
name = "search_igdb"
path = "src/utils/search_igdb.rs"

[[bin]] 
name = "storefront_cleanup"
path = "src/utils/storefront_cleanup.rs"


[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
clap = { version="4.2", features = ["derive"] }
firestore-db-and-auth = "0.6"
futures = "0.3"
itertools = "0.11"
phf = { version="0.11", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27", features = ["full", "tracing"] }
warp = "0.3"

tracing = "0.1"
tracing-subscriber =  "0.3"
tracing-opentelemetry = "0.19" 
tracing-stackdriver = { version = "0.7", features = ["opentelemetry"] }
opentelemetry = "0.19"
opentelemetry-jaeger = "0.18"
