[package]
name = "espy_backend"
version = "0.1.1"
authors = ["bourdenas"]
edition = "2021"

[[bin]]
name = "http_server"
path = "src/http_server.rs"

[[bin]]
name = "resolver_backend"
path = "src/resolver_backend.rs"

[[bin]]
name = "webhooks_backend"
path = "src/webhooks_backend.rs"

[[bin]]
name = "webhook_registration"
path = "src/webhook_registration.rs"

# Batch offline jobs
[[bin]]
name = "build_notable"
path = "src/batch/build_notable.rs"

[[bin]]
name = "build_timeline"
path = "src/batch/build_timeline.rs"

[[bin]]
name = "build_year_summary"
path = "src/batch/build_year_summary.rs"

[[bin]]
name = "wikipedia_scrape"
path = "src/batch/wikipedia_scrape.rs"


# Tools for genre analysis / training.
[[bin]]
name = "batch_predictor"
path = "src/genres/utils/batch_predictor.rs"

[[bin]]
name = "export_labeled_entries"
path = "src/genres/utils/export_labeled_entries.rs"

[[bin]]
name = "predict"
path = "src/genres/utils/predict.rs"


# IGDB batch pipelines
[[bin]]
name = "collect_collections"
path = "src/resolver/batch/collect_collections.rs"

[[bin]]
name = "collect_companies"
path = "src/resolver/batch/collect_companies.rs"

[[bin]]
name = "collect_external_games"
path = "src/resolver/batch/collect_external_games.rs"

[[bin]]
name = "collect_games"
path = "src/resolver/batch/collect_games.rs"

[[bin]]
name = "collect_genres"
path = "src/resolver/batch/collect_genres.rs"

[[bin]]
name = "collect_keywords"
path = "src/resolver/batch/collect_keywords.rs"


# Command line utils
[[bin]]
name = "count_docs"
path = "src/utils/count_docs.rs"

[[bin]]
name = "sync_library"
path = "src/utils/sync_library.rs"

[[bin]]
name = "refresh_collections"
path = "src/utils/refresh_collections.rs"

[[bin]]
name = "refresh_companies"
path = "src/utils/refresh_companies.rs"

[[bin]]
name = "refresh_game_entries"
path = "src/utils/refresh_game_entries.rs"

[[bin]]
name = "refresh_library_entries"
path = "src/utils/refresh_library_entries.rs"

[[bin]]
name = "search_igdb"
path = "src/utils/search_igdb.rs"

[[bin]]
name = "storefront_cleanup"
path = "src/utils/storefront_cleanup.rs"

[[bin]]
name = "gog_scrape"
path = "src/utils/gog_scrape.rs"


[dependencies]
async-recursion = "1.1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
firestore = "0.43.1"
futures = "0.3"
itertools = "0.13"
lazy_static = "1.5"
phf = { version = "0.11", features = ["macros"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
soup = "0.5"
tokio = { version = "1.40", features = ["full", "tracing"] }
warp = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.26"
tracing-stackdriver = { version = "0.10", features = ["opentelemetry"] }
